Some improvement on ingredient controller after testing with interface